# FIFO-C

./: CMakeLists.txt  README.md
src/: receiver.c  sender.c
